# portmanteau-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: benchmark.rs  input_pairs.csv
portmanteau-bin/: Cargo.toml
portmanteau-bin/src/: lib.rs  main.rs
portmanteau-bin/tests/: integration_tests.rs
src/: lib.rs
tests/: integration_tests.rs
