[package]
name = "portmanteau"
description = "A library to create portmanteaux"
categories = ["text-processing"]
version = "0.2.2"
edition = "2018"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://codeberg.org/alpha-tango-kilo/portmanteau-rs"
repository = "https://codeberg.org/alpha-tango-kilo/portmanteau-rs"
documentation = "https://docs.rs/portmanteau/"

[workspace]
members = [
	"portmanteau-bin"
]

[dependencies]

[dev-dependencies]
criterion = "0.5"
csv = "1.1"

# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false
