[package]
name = "portmanteau-bin"
description = "A program to create portmanteau from the commandline"
categories = ["text-processing", "command-line-utilities"]
version = "1.2.0"
edition = "2018"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
homepage = "https://codeberg.org/alpha-tango-kilo/portmanteau-rs"
repository = "https://codeberg.org/alpha-tango-kilo/portmanteau-rs"

[dependencies]
portmanteau = { path = ".." }

[dependencies.pico-args]
version = "0.4"
default-features = false
features = ["combined-flags"]

[dev-dependencies]
assert_cmd = "1.0"

[[bin]]
name = "portmanteau"
path = "src/main.rs"
